# warroom-ai

./: .editorconfig  .gitignore  ARCHITECTURE.md  BRIGHT_DATA_USAGE.md  README.md
api/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
api/app/: config.py  inngest_client.py
api/app/agents/: commander.py  events.py  graph.py  planner.py  researcher.py  skeptic.py  state.py  verifier.py
api/app/bright_data/: base.py  browser.py  mcp_client.py  scraper_api.py  serp.py  unlocker.py
api/app/db/: client.py
api/app/missions/: account_pulse.py  supplier_watch.py  threat_surface.py
api/app/routes/: briefs.py  health.py  missions.py  schedules.py
api/app/schemas/: agent_event.py  brief.py  mission.py
api/scripts/: add_brief_shared_at.sql  add_schedule_slack_webhook.sql  create_mission_schedules.sql  create_scraper_cache.sql  test_bright_data_all.py
api/tests/: test_db.py  test_health.py
docs/sample-briefs/: anthropic-account-pulse.md  boeing-supplier-watch.md  change-healthcare-threat-surface.md
docs/submission/: submission-text.md
docs/video/: script.md
supabase/: README.md  schema.sql
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/health/: route.ts
web/app/pricing/: page.tsx
web/app/share/[id]/: page.tsx
web/app/war-room/: page.tsx
web/components/shared/: logo.tsx
web/components/war-room/: agent-card.tsx  battle-brief.tsx  mission-console.tsx  score-gauge.tsx
web/lib/: api.ts  supabase.ts
