[project]
name = "warroom-ai-api"
version = "0.1.0"
description = "War Room AI — autonomous market intelligence backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.5.0",
    "sse-starlette>=2.1.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "inngest>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
